--- a/config.org
+++ b/config.org
@@ -24,6 +24,7 @@
    - [[#company][company]]
    - [[#whole-line-or-region][whole-line-or-region]]
    - [[#visual-regexp][visual-regexp]]
+   - [[#comment-dwim-2][comment-dwim-2]]
  - [[#org-mode][org mode]]
  - [[#interactively-do-things][Interactively do things]]
  - [[#project-management][Project management]]
@@ -418,6 +419,17 @@ Nice visual regexes.
     :ensure t
     :bind (("C-c r" . vr/replace)
            ("C-c q" . vr/query-replace)))
+#+END_SRC
+
+** comment-dwim-2
+
+Extends the built-in comment-dwim.
+
+#+BEGIN_SRC emacs-lisp
+(use-package comment-dwim-2
+    :ensure t
+    :bind (("M-;" . comment-dwim-2))
+    :init (setq comment-dwim-2--inline-comment-behavior 'reindent-comment))
 #+END_SRC
 
 * org mode
