--- a/config.org
+++ b/config.org
@@ -52,6 +52,7 @@
  - [[#mails][mails]]
    - [[#smtpmail-sending-mails][smtpmail (sending mails)]]
    - [[#mu4e-reading-mails][mu4e (reading mails)]]
+ - [[#sudo-edit][sudo edit]]
 
 * Setup
 
@@ -1050,4 +1051,19 @@ emacs, and also require a tool to sync your mails locally. A good one is mbsync.
      mu4e-confirm-quit nil)
 
     :bind ("C-x m" . mu4e))
+#+END_SRC
+* sudo edit
+  See http://emacsredux.com/blog/2013/04/21/edit-files-as-root/
+#+BEGIN_SRC emacs-lisp
+  (defun sudo-edit (&optional arg)
+    "Edit currently visited file as root.
+
+  With a prefix ARG prompt for a file to visit.
+  Will also prompt for a file to visit if current
+  buffer is not visiting a file."
+    (interactive "P")
+    (if (or arg (not buffer-file-name))
+        (find-file (concat "/sudo:root@localhost:"
+                           (ido-read-file-name "Find file(as root): ")))
+      (find-alternate-file (concat "/sudo:root@localhost:" buffer-file-name))))
 #+END_SRC
