--- a/config.org
+++ b/config.org
@@ -50,7 +50,7 @@
  - [[#google-translate][google translate]]
  - [[#web-browser-w3m-and-conkeror][web browser (w3m and conkeror)]]
  - [[#docker][docker]]
- - [[#hipchat-jabber][hipchat (jabber)]]
+ - [[#hipchat-erc][hipchat (erc)]]
  - [[#pastebin][pastebin]]
  - [[#media-player][media player]]
  - [[#mails][mails]]
@@ -963,24 +963,32 @@ And docker allow to manipulate docker images and containers easily.
     :ensure t)
 #+END_SRC
 
-* hipchat (jabber)
+* hipchat (erc)
 
 #+BEGIN_SRC emacs-lisp
-  (use-package jabber
+  (use-package erc
     :ensure t
-    :defer t
-    :commands jabber-connect
+    :commands (my-erc-kill-buffers bitlbee-connect)
     :init
-    (setq jabber-account-list (if has-secrets
-                                  ;; steery.io account
-                                  `(("213996_3664926@chat.hipchat.com"
-                                     (:password . ,jabber_steery_password)))
-                                `(("213996_3664926@chat.hipchat.com"))))
-    :config
-    (define-jabber-alert echo "Show a message in the echo area"
-      (lambda (msg)
-        (unless (minibuffer-prompt)
-          (message "%s" msg)))))
+    (defun bitlbee-connect ()
+    (interactive)
+    (erc :server "127.0.0.1"
+         :port 6667
+         :nick "jp"
+         :password (if has-secrets
+                       jabber_steery_password
+                     nil)))
+
+    (defun my-erc-kill-buffers ()
+      (interactive)
+      (let ((buffers (buffer-list))
+            (buffer nil))
+        (while buffers
+          (setq buffer (car buffers))
+          (setq buffers (cdr buffers))
+          (with-current-buffer buffer
+            (if (eql major-mode 'erc-mode)
+                (kill-buffer buffer)))))))
 #+END_SRC
 
 * pastebin
