--- a/config.org
+++ b/config.org
@@ -894,7 +894,8 @@ Tern is for auto-completion and the like.
     :ensure t
     :init
     (setq inferior-lisp-program "/usr/bin/sbcl")
-    (setq slime-contribs '(slime-fancy)))
+    (setq slime-contribs '(slime-fancy))
+    (add-hook 'slime-repl-mode-hook 'smartparens-mode))
 #+END_SRC
 
 * google translate
