--- a/config.org
+++ b/config.org
@@ -850,7 +850,9 @@ Tern is for auto-completion and the like.
     (add-hook 'c++-mode-hook 'irony-mode)
     (add-hook 'c-mode-hook 'irony-mode)
     ;; irony does not find the database without that...
-    (add-hook 'irony-mode-hook 'irony-cdb-autosetup-compile-options))
+    (add-hook 'irony-mode-hook 'irony-cdb-autosetup-compile-options)
+    (setq irony-additional-clang-options '("-std=c++11"))
+    (setq-default c-basic-offset 2))
 
   (use-package company-irony
     :ensure t
