--- a/config.org
+++ b/config.org
@@ -843,28 +843,27 @@ Tern is for auto-completion and the like.
 
 ** c++
 
+rtags must be installed manually, see
+https://github.com/Andersbakken/rtags.
+
 #+BEGIN_SRC emacs-lisp
-  (use-package irony
-    :ensure t
+  (use-package rtags
     :init
-    (add-hook 'c++-mode-hook 'irony-mode)
-    (add-hook 'c-mode-hook 'irony-mode)
-    ;; irony does not find the database without that...
-    (add-hook 'irony-mode-hook 'irony-cdb-autosetup-compile-options)
-    (setq irony-additional-clang-options '("-std=c++11"))
-    (setq-default c-basic-offset 2))
+    (setq rtags-autostart-diagnostics t)
+    (setq rtags-completions-enabled t)
+    (setq-default c-basic-offset 2)
+    (push 'company-rtags company-backends)
 
-  (use-package company-irony
-    :ensure t
-    :init
-    (eval-after-load 'company
-      '(add-to-list 'company-backends 'company-irony)))
+    (defun my-flycheck-rtags-setup ()
+      (flycheck-select-checker 'rtags)
+      (setq-local flycheck-highlighting-mode nil) ;; RTags creates more accurate overlays.
+      (setq-local flycheck-check-syntax-automatically nil))
+    ;; c-mode-common-hook is also called by c++-mode
+    (add-hook 'c-mode-common-hook #'my-flycheck-rtags-setup)
 
-  (use-package flycheck-irony
-    :ensure t
-    :init
-    (eval-after-load 'flycheck
-      '(add-hook 'flycheck-mode-hook #'flycheck-irony-setup)))
+    :bind (:map c-mode-base-map
+                ("M-." . rtags-find-symbol-at-point)
+                ("M-," . rtags-location-stack-back)))
 #+END_SRC
 
 ** rust
