put swiper on C-c s
swiper does behave exactly like search forward, and for macro it is a
pain to use. So put it to another key-chord!

--- a/config.org
+++ b/config.org
@@ -645,7 +645,7 @@ org-toc allow to render TOC on github.
 
   (use-package swiper
     :ensure t
-    :bind ("C-s" . swiper))
+    :bind ("C-c s" . swiper))
 
   (use-package counsel
     :ensure t
